Update **/*/tex, Remove **/*/pdf

--- a/src/yh_resume.tex
+++ b/src/yh_resume.tex
@@ -243,7 +243,7 @@
         \resumeItemListStart
           \resumeItem{Building \textbf{a online CV website} based on \textbf{LaTeX} to record my experience, projects, education, skills.}
           \resumeItem{Render a CV file via \textbf{single HTML-CSS-JavaScript transform from PDF Source with pdf2htmlEX} or access \textbf{PDF file directly via built-in PDF viewer of browsers(Google Chrome, Brave, Firefox, Safari...etc)}}
-          \resumeItem{Learning concepts of \textbf{Serverless services via Cloudflare Workers & Pages}}
+          \resumeItem{Learning concepts of \textbf{Serverless services via Cloudflare Workers and Pages}}
           \resumeItem{Development and Deployment CI/CD pipelines with \textbf{Bash, Docker, GitHub, Cloudflare Pages} to make \textbf{Proof of concept.}}
           \resumeItem{\textbf{Tech Stack}: LaTeX, pdf2htmlEX, Bash, JavaScript/TypeScript, node.js, React, Next.js, GNU Make, Github, Linux, Docker, Nginx, Cloudflare Workers & Pages}
         \resumeItemListEnd          
