--- a/src/yh_resume.tex
+++ b/src/yh_resume.tex
@@ -245,7 +245,7 @@
           \resumeItem{Render a CV file via \textbf{single HTML-CSS-JavaScript transform from PDF Source with pdf2htmlEX} or access \textbf{PDF file directly via built-in PDF viewer of browsers(Google Chrome, Brave, Firefox, Safari...etc)}}
           \resumeItem{Learning concepts of \textbf{Serverless services via Cloudflare Workers and Pages}}
           \resumeItem{Development and Deployment CI/CD pipelines with \textbf{Bash, Docker, GitHub, Cloudflare Pages} to make \textbf{Proof of concept.}}
-          \resumeItem{\textbf{Tech Stack}: LaTeX, pdf2htmlEX, Bash, JavaScript/TypeScript, node.js, React, Next.js, GNU Make, Github, Linux, Docker, Nginx, Cloudflare Workers & Pages}
+          \resumeItem{\textbf{Tech Stack}: LaTeX, pdf2htmlEX, Bash, JavaScript/TypeScript, node.js, React, Next.js, GNU Make, Github, Linux, Docker, Nginx, Cloudflare Workers and Pages}
         \resumeItemListEnd          
     \resumeSubHeadingListEnd
 
