--- a/src/yh_resume.tex
+++ b/src/yh_resume.tex
@@ -170,11 +170,11 @@
   {System/DevOps Engineer}{Jun. 2025 -- Current}
   {Logic Solutions Inc.}{}  
   \resumeItemListStart
-    \resumeItem{\textbf{Quantum Product Systems} on \textbf{AWS, On-premise}}
-      \resumeSubItem{Building system on AWS with \textbf{Gitlab/Terraform/Terragrunt/AtlantisTerraform Pull Request Automation/Packer}}
-      \resumeSubItem{Development and Operation Automation tasks with \textbf{Ansible}}      
-      \resumeSubItem{Building CI/CD pipelines with \textbf{Jenkins/Groovy scripts}}
-      \resumeSubItem{Extend Observability with \textbf{Grafana/Prometheus/*-exporters/Alertmanager/Consul}}      
+    \resumeItem{\textbf{DevOps Systems} on \textbf{AWS, On-premise}}
+      \resumeSubItem{\textbf{Troubleshooting services error, bugs, performance...etc} on \textbf{AWS (VPC/EC2/RDS...etc), On-premise} with \textbf{Linux CLI tools and related metrics, logs}}
+      \resumeSubItem{\textbf{Building Quantum Product Systems} on \textbf{AWS (VPC/EC2/RDS...etc)} with \textbf{Gitlab/Terraform/Terragrunt/AtlantisTerraform Pull Request Automation/Packer/Ansible}}      
+      \resumeSubItem{\textbf{Maintaining CI/CD pipelines} with \textbf{Jenkins/Groovy scripts/Gitlab}}
+      \resumeSubItem{\textbf{Extend Observability} with \textbf{Grafana/Prometheus/*-exporters/Alertmanager/Consul}}      
       \resumeSubItem{\textbf{Tech Stack}: Linux, Windows Server, AWS, Gitlab, Terraform, Terragrunt, AtlantisTerraform Pull Request Automation, Packer, Ansible, Jenkins, Groovy, Bash, Python, Golang, JavaScript/TypeScript, Angular, Java, Spring Boot, Flyway, MySQL, Microsoft SQL Server, RabbitMQ, Bash, Docker, Kubernetes...etc}
   \resumeItemListEnd
 
@@ -251,7 +251,7 @@
 
     \resumeSubHeadingListStart
     \resumeProjectHeading
-        {\textbf{setup dev environment}} {Dec. 2022 -- Present}
+        {\textbf{setup devops environment}} {Dec. 2022 -- Present}
         \resumeItemListStart
           \resumeItem{Building \textbf{a personal notes website} based on \textbf{Material for MkDocs} to render Markdown files to web pages.}
           \resumeItem{\textbf{Tech Stack}: Python, Bash, Yaml, Markdown, Github, GitHub Actions, Linux, Docker, Nginx, Cloudflare}
