--- a/src/yh_resume.tex
+++ b/src/yh_resume.tex
@@ -289,7 +289,7 @@
      \textbf{Programming}{: Python(proficient), Bash(competence), JavaScript/HTML/CSS(competence), SQL(competence), PHP(beginner, )Golang(beginner), Rust(beginner), Java(beginner), C(beginner)}\vspace{2pt} \\
      \textbf{Frameworks}{: Django, FastAPI, Selenium, pandas, SQLAlchemy} \\
      \textbf{Operating system}{: Linux(Ubuntu, Debian, CentOS, RHEL, RockyLinux, Amazon Linux, Vyos, Arch Linux, ...etc)(proficient), macOS(beginner), Windows(beginner)}
-     \textbf{Continuous Integration(CI) & Continuous Delivery(CD)}{:GitLab Runner, Github Actions, Jenkins, Tekton Pipelines, Argo CD}
+     \textbf{Continuous Integration(CI) and Continuous Delivery(CD)}{:GitLab Runner, Github Actions, Jenkins, Tekton Pipelines, Argo CD}
      \textbf{Streaming & Messaging}{: Apache RocketMQ, RabbitMQ}
      \textbf{Scheduling & Orchestration}{: Kubernetes, KEDA}
      \textbf{Certified Kubernetes - Distribution}{: k3s, k0s}
