--- a/src/yh_resume.tex
+++ b/src/yh_resume.tex
@@ -289,17 +289,17 @@
      \textbf{Programming}{: Python(proficient), Bash(competence), JavaScript/HTML/CSS(competence), SQL(competence), PHP(beginner, )Golang(beginner), Rust(beginner), Java(beginner), C(beginner)}\vspace{2pt} \\
      \textbf{Frameworks}{: Django, FastAPI, Selenium, pandas, SQLAlchemy} \\
      \textbf{Operating system}{: Linux(Ubuntu, Debian, CentOS, RHEL, RockyLinux, Amazon Linux, Vyos, Arch Linux, ...etc)(proficient), macOS(beginner), Windows(beginner)}
-     \textbf{Continuous Integration(CI) \\& Continuous Delivery(CD)}{:GitLab Runner, Github Actions, Jenkins, Tekton Pipelines, Argo CD}
-     \textbf{Streaming \\& Messaging}{: Apache RocketMQ, RabbitMQ}
-     \textbf{Scheduling \\& Orchestration}{: Kubernetes, KEDA}
+     \textbf{Continuous Integration(CI) \& Continuous Delivery(CD)}{:GitLab Runner, Github Actions, Jenkins, Tekton Pipelines, Argo CD}
+     \textbf{Streaming \& Messaging}{: Apache RocketMQ, RabbitMQ}
+     \textbf{Scheduling \& Orchestration}{: Kubernetes, KEDA}
      \textbf{Certified Kubernetes - Distribution}{: k3s, k0s}
      \textbf{Certified Kubernetes - Hosted}{:Amazon Elastic Container Service for Kubernetes (EKS), Google Kubernetes Engine (GKE), Alibaba Cloud Container Service for Kubernetes}
      \textbf{Certified Kubernetes - Installer}{: kind, minikube, Rancher Kubernetes Engine (RKE)}
      \textbf{Service Proxy}{: NGINX, HAProxy, MetalLB, Envoy}
      \textbf{Service Mesh}{: Consul, Istio, Linkerd}
-     \textbf{Coordination \\& Service Discovery}{: Apache Zookeeper, Nacos, Netflix Eureka}
+     \textbf{Coordination \& Service Discovery}{: Apache Zookeeper, Nacos, Netflix Eureka}
      \textbf{Container Registry}{: Harbor}
-     \textbf{Automation \\& Configuration}{: Ansible, Atlantis, Terraform, Terragrunt, Pulumi, Ansible}
+     \textbf{Automation \& Configuration}{: Ansible, Atlantis, Terraform, Terragrunt, Pulumi, Ansible}
      \textbf{Cloud Providers}{: AWS, Google Cloud, Alibaba Cloud, Cloudflare}
      \textbf{Certification}{: AWS Certified Solutions Architect – Associate, AWS Certified Cloud Practitioner}
     }}
