--- a/src/yh_resume.tex
+++ b/src/yh_resume.tex
@@ -301,7 +301,7 @@
      \textbf{Container Registry}{: Harbor}
      \textbf{Automation \& Configuration}{: Ansible, Atlantis, Terraform, Terragrunt, Pulumi, Ansible}
      \textbf{Cloud Providers}{: AWS, Google Cloud, Alibaba Cloud, Cloudflare}
-     \textbf{Certification}{: AWS Certified Solutions Architect – Associate, AWS Certified Cloud Practitioner}
+     \textbf{Certification}{: AWS Certified Solutions Architect Associate, AWS Certified Cloud Practitioner}
     }}
  \end{itemize}
 
