--- a/src/yh_resume.tex
+++ b/src/yh_resume.tex
@@ -286,17 +286,15 @@
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
      \textbf{Languages}{: Mandarin (native), English (professional working proficiency)}\vspace{2pt} \\
-     \textbf{Programming}{: Python(proficient), Bash(competence), JavaScript/HTML/CSS(competence), SQL(competence), PHP(beginner, )Golang(beginner), Rust(beginner), Java(beginner), C(beginner)}\vspace{2pt} \\
+     \textbf{Programming Languages}{: Python(proficient), Bash(competence), SQL(competence), Golang(beginner), Rust(beginner)}\vspace{2pt} \\
+     \textbf{Version Control}{: git} \\
      \textbf{Frameworks}{: Django, FastAPI, Selenium, pandas, SQLAlchemy} \\
-     \textbf{Operating system}{: Linux(Ubuntu, Debian, CentOS, RHEL, RockyLinux, Amazon Linux, Vyos, Arch Linux, ...etc)(proficient), macOS(beginner), Windows(beginner)}\\
+     \textbf{Operating system}{: Linux(proficient), macOS(beginner), Windows(beginner)}\\
      \textbf{Continuous Integration(CI) \& Continuous Delivery(CD)}{:GitLab Runner, Github Actions, Jenkins, Tekton Pipelines, Argo CD} \\
      \textbf{Streaming \& Messaging}{: Apache RocketMQ, RabbitMQ} \\
-     \textbf{Scheduling \& Orchestration}{: Kubernetes, KEDA} \\
-     \textbf{Certified Kubernetes - Distribution}{: k3s, k0s} \\
-     \textbf{Certified Kubernetes - Hosted}{:Amazon Elastic Container Service for Kubernetes (EKS), Google Kubernetes Engine (GKE), Alibaba Cloud Container Service for Kubernetes} \\
-     \textbf{Certified Kubernetes - Installer}{: kind, minikube, Rancher Kubernetes Engine (RKE)} \\
+     \textbf{Scheduling \& Orchestration}{: Kubernetes(EKS, GKE, ACK, k0s...etc), KEDA} \\
      \textbf{Service Proxy}{: NGINX, HAProxy, MetalLB, Envoy} \\
-     \textbf{Service Mesh}{: Consul, Istio, Linkerd} \\
+     \textbf{Service Mesh}{: Consul} \\
      \textbf{Coordination \& Service Discovery}{: Apache Zookeeper, Nacos, Netflix Eureka} \\
      \textbf{Container Registry}{: Harbor} \\
      \textbf{Automation \& Configuration}{: Ansible, Atlantis, Terraform, Terragrunt, Pulumi, Ansible} \\
