--- a/src/yh_resume.tex
+++ b/src/yh_resume.tex
@@ -174,20 +174,19 @@
       \resumeSubItem{\textbf{Troubleshooting services error, bugs, performance...etc} on \textbf{AWS (VPC/EC2/RDS...etc), On-premise} with \textbf{Linux CLI tools and related metrics, logs}}
       \resumeSubItem{\textbf{Building Quantum Product Systems} on \textbf{AWS (VPC/EC2/RDS...etc)} with \textbf{Gitlab/Terraform/Terragrunt/AtlantisTerraform Pull Request Automation/Packer/Ansible}}      
       \resumeSubItem{\textbf{Maintaining CI/CD pipelines} with \textbf{Jenkins/Groovy scripts/Gitlab}}
-      \resumeSubItem{\textbf{Extend Observability} with \textbf{Grafana/Prometheus/*-exporters/Alertmanager/Consul}}      
-      \resumeSubItem{\textbf{Tech Stack}: Linux, Windows Server, AWS, Gitlab, Terraform, Terragrunt, AtlantisTerraform Pull Request Automation, Packer, Ansible, Jenkins, Groovy, Bash, Python, Golang, JavaScript/TypeScript, Angular, Java, Spring Boot, Flyway, MySQL, Microsoft SQL Server, RabbitMQ, Bash, Docker, Kubernetes...etc}
+      \resumeSubItem{\textbf{Extend Observability} with \textbf{Grafana/Prometheus/*-exporters/Alertmanager/Consul}}            
   \resumeItemListEnd
 
   \resumeSubheading
   {System/Site Reliability Engineering (SRE)/DevOps Engineering}{Nov. 2023 -- Dec. 2024}
   {Mending Technology CO., LTD.}{}  
   \resumeItemListStart
-    \resumeItem{\textbf{Cryptocurrency Exchange System} on \textbf{AWS, On-premise} with more than \textbf{200 EC2/EKS/VM nodes} across \textbf{development, test, staging and production environments.}}
-      \resumeSubItem{Participated in \textbf{Deployment of On-premise self-managed: Kubernetes cluster via Kubeadm/MetalLB/VMware vSphere, MySQL, RocketMQ, Redis, Nacos, Harbor}...etc.}
-      \resumeSubItem{Participated in \textbf{the cross-AWS account service migration in a production environment.} Used \textbf{Pulumi alongside Ansible} to provision \textbf{AWS EC2 resources.}}
-      \resumeSubItem{\textbf{Implemented an automated provisioning workflow} for various \textbf{AWS resources (AWS IAM, EC2, Aurora MySQL, Route53...etc)} in a \textbf{staging environment} using \textbf{Pulumi with Python scripts, Ansible playbooks.}}
-      \resumeSubItem{Contributed to \textbf{optimizing and improving the CI pipeline} for the Java development team, providing demonstration workflows and best practices via \textbf{Gitlab CI and many other related Tools.}}
-      \resumeSubItem{\textbf{Tech Stack}: Vue, PHP, Golang, Gin, Java, Spring Boot, Nacos, RocketMQ, Redis, Aurora MySQL, Python, Bash, Yaml, JSON, Linux, AWS, Gitlab, Docker, Kubernetes...etc}
+    \resumeItem{Supported a \textbf{cryptocurrency exchange platform} on AWS and on-premise infrastructure, focusing on making large-scale systems more controllable through \textbf{environment isolation}, \textbf{infrastructure automation}, and \textbf{reliability-oriented practices} across development, test, staging, and production environments.}
+      \resumeSubItem{Built a Docker container-based \textbf{toolbox} for \textbf{troubleshooting and automation development} across \textbf{AWS and on-premise environments}, enabling team members to quickly \textbf{set up standardized workflows}.}
+      \resumeSubItem{Worked with the team to \textbf{build an on-premise development environment} using \textbf{VMware vSphere, Kubernetes (kubeadm), and MetalLB}, reducing dependency on a shared AWS environment and improving developer productivity and environment isolation.}
+      \resumeSubItem{Implemented \textbf{Infrastructure as Code (IaC)} using \textbf{Pulumi (Python) and Ansible} to automate infrastructure changes in the \textbf{production environment} and provision a \textbf{staging environment} for QA, SRE, and DevOps teams.}
+      \resumeSubItem{Participated in \textbf{SRE/DevOps roadmap discussions} focused on improving system controllability, including Docker image hardening, observability enhancements, and automation of incident response workflows, aiming to reduce reliance on individual experience when diagnosing production issues.}
+      \resumeSubItem{Overall, my work focused on \textbf{turning complex cryptocurrency exchange infrastructure} into systems that are \textbf{easier to reason about, operate, and recover from failures}.}
   \resumeItemListEnd
 
   \resumeSubheading
@@ -198,19 +197,16 @@
       \resumeSubItem{Implemented CNCF-compliant system architectures by progressively introducing \textbf{Docker containerization, Kubernetes, and the Ingress-Nginx/Cert-Manager stack} in different phases of the system development lifecycle.}
       \resumeSubItem{Built systems using common cloud services such as \textbf{EC2, EKS, GKE, ACL, ELB, RDS...etc}, along with self-hosted services like \textbf{Nacos, RocketMQ, Redis, etc.}}
       \resumeSubItem{Maintained Kubernetes clusters for multiple client projects and provided optimization and troubleshooting solutions.}
-      \resumeSubItem{Assisted in building and maintaining Gitlab or Jenkins CI/CD pipelines for client projects, including optimizing \textbf{.gitlab-ci.yml} Bash scripts for GitLab Runner, significantly reducing \textbf{cross-region network latency} issues.}
-      \resumeSubItem{\textbf{Tech Stack}: Java, Spring Boot, Spring Cloud, Golang, PHP, JavaScript, Yaml, Prometheus, Grafana, ELK stack, AWS, GCP, Alibaba Cloud, CDNetworks, Linux, Docker, Kubernetes(GKE, EKS, ACK)...etc}
+      \resumeSubItem{Assisted in building and maintaining Gitlab or Jenkins CI/CD pipelines for client projects, including optimizing \textbf{.gitlab-ci.yml} Bash scripts for GitLab Runner, significantly reducing \textbf{cross-region network latency} issues.}      
     \resumeItem{Development in a \textbf{Python Automation Project:} \textbf{boce-crawler}}
       \resumeSubItem{Building a crontab task based on a \textbf{Python} program to extract network metrics from 3rd-party website and transform, load these data to MariaDB as Grafana datasource.}
       \resumeSubItem{Because of the \textbf{data loss of our 3rd-party network monitoring API}  when testing with My automation teammate's API wrapper.}
-      \resumeSubItem{Our crontab task keep running for \textbf{3 months} before we find another 3rd-party network monitoring service.}
-      \resumeSubItem{\textbf{Tech Stack}: Python, Selenium, undetected-chromedriver, pandas, SQLAlchemy, Linux, Docker, Google Chrome,MariaDB, Grafana...etc}    
+      \resumeSubItem{Our crontab task keep running for \textbf{3 months} before we find another 3rd-party network monitoring service.}      
     \resumeItem{Participated in a \textbf{Long-term support project: Dragon}}
       \resumeSubItem{Which is a \textbf{video streaming platform} based on a \textbf{Open Source project: SRS and Kubernetes}.}
       \resumeSubItem{Trying to \textbf{restream live content across multiple platforms} on \textbf{server-side}.}
       \resumeSubItem{Within this project, I've focus on building \textbf{Hybrid cloud infrastructure with GCP/Alibaba Cloud}.}
-      \resumeSubItem{Suvery CI/CD pipelines built with Gitlab webhook with \textbf{Tekton Pipelines} to \textbf{replace Gitlab Runner.}}
-      \resumeSubItem{\textbf{Tech Stack}: Golang, Bash, Yaml, Prometheus, Grafana, ELK stack, GCP, Alibaba Cloud, CDNetworks, Linux, Docker, Kubernetes(GKE, ACK)...etc}
+      \resumeSubItem{Suvery CI/CD pipelines built with Gitlab webhook with \textbf{Tekton Pipelines} to \textbf{replace Gitlab Runner.}}      
   \resumeItemListEnd
 
   \resumeSubheading
@@ -218,8 +214,7 @@
   {Industrial Technology Research Institute, (ITRI)}{}  
   \resumeItemListStart
     \resumeItem{Participated in a \textbf{project: IndoorAirBox}}
-      \resumeSubItem{Which is a \textbf{monitoring platform} based on \textbf{Raspberry Pi, ESP8266, and related dev-tools}.}
-      \resumeSubItem{\textbf{Tech Stack}: IoT , Linux, Embedded system development, Apache, C, PHP, JavaScript, CSS, HTML, Bootstrap}
+      \resumeSubItem{Which is a \textbf{monitoring platform} based on \textbf{Raspberry Pi, ESP8266, and related dev-tools}.}      
   \resumeItemListEnd
 
   \resumeSubHeadingListEnd  
