--- a/src/yh_resume.tex
+++ b/src/yh_resume.tex
@@ -193,29 +193,30 @@
   {Site Reliability Engineering (SRE)/DevOps/Cloud engineering}{Nov. 2021 -- April. 2023}
   {CloudRock Technology Co., Ltd}{}  
   \resumeItemListStart
-    \resumeItem{Based on project characteristics and client requirements (e.g., \textbf{chatting and social apps, payment systems, sports data platforms, live streaming services, etc.}), assisted in system migration, deployment, and refactoring across multiple cloud environments, including \textbf{AWS, GCP, Alibaba Cloud, CloudFlare, and other public cloud services}.}      
-      \resumeSubItem{Implemented CNCF-compliant system architectures by progressively introducing \textbf{Docker containerization, Kubernetes, and the Ingress-Nginx/Cert-Manager stack} in different phases of the system development lifecycle.}
-      \resumeSubItem{Built systems using common cloud services such as \textbf{EC2, EKS, GKE, ACL, ELB, RDS...etc}, along with self-hosted services like \textbf{Nacos, RocketMQ, Redis, etc.}}
-      \resumeSubItem{Maintained Kubernetes clusters for multiple client projects and provided optimization and troubleshooting solutions.}
-      \resumeSubItem{Assisted in building and maintaining Gitlab or Jenkins CI/CD pipelines for client projects, including optimizing \textbf{.gitlab-ci.yml} Bash scripts for GitLab Runner, significantly reducing \textbf{cross-region network latency} issues.}      
-    \resumeItem{Development in a \textbf{Python Automation Project:} \textbf{boce-crawler}}
-      \resumeSubItem{Building a crontab task based on a \textbf{Python} program to extract network metrics from 3rd-party website and transform, load these data to MariaDB as Grafana datasource.}
-      \resumeSubItem{Because of the \textbf{data loss of our 3rd-party network monitoring API}  when testing with My automation teammate's API wrapper.}
-      \resumeSubItem{Our crontab task keep running for \textbf{3 months} before we find another 3rd-party network monitoring service.}      
-    \resumeItem{Participated in a \textbf{Long-term support project: Dragon}}
-      \resumeSubItem{Which is a \textbf{video streaming platform} based on a \textbf{Open Source project: SRS and Kubernetes}.}
-      \resumeSubItem{Trying to \textbf{restream live content across multiple platforms} on \textbf{server-side}.}
-      \resumeSubItem{Within this project, I've focus on building \textbf{Hybrid cloud infrastructure with GCP/Alibaba Cloud}.}
-      \resumeSubItem{Suvery CI/CD pipelines built with Gitlab webhook with \textbf{Tekton Pipelines} to \textbf{replace Gitlab Runner.}}      
+    \resumeItem{Worked from a  Cloud to SRE/DevOps engineer in a consulting environment, supporting \textbf{multiple client systems} (e.g., social/chat applications, payment systems, sports data platforms, and live streaming services) by designing, migrating, and operating systems across \textbf{AWS, GCP, Alibaba Cloud, and Cloudflare}.}
+      \resumeSubItem{Designed and evolved \textbf{CNCF-aligned system architectures} by introducing \textbf{Docker containerization, Kubernetes orchestration, and Ingress-Nginx + cert-manager} across different project phases.}
+      \resumeSubItem{Built and operated cloud-native systems using managed services (\textbf{EC2, EKS, GKE, ELB, RDS}) and self-hosted middleware (\textbf{Nacos, RocketMQ, Redis}), balancing cost, performance, and operational complexity.}
+      \resumeSubItem{Maintained and troubleshot \textbf{multiple Kubernetes clusters} for client environments, providing performance tuning, deployment optimization, and incident-level support.}
+      \resumeSubItem{Built and maintained \textbf{GitLab CI and Jenkins pipelines} for client projects, including optimization of \textbf{.gitlab-ci.yml} and Bash-based GitLab Runner workflows, reducing cross-region CI execution latency and improving pipeline stability.}
+    \resumeItem{Developed a \textbf{Python-based automation project (boce-crawler)} to collect external network metrics and provide a reliable monitoring data source.}
+      \resumeSubItem{Implemented a \textbf{scheduled data collection pipeline} using Python and crontab to extract metrics from third-party websites, transform the data, and load it into \textbf{MariaDB} as a \textbf{Grafana data source}.}
+      \resumeSubItem{Designed a temporary \textbf{fallback monitoring solution} to mitigate data loss caused by instability of a third-party monitoring API, ensuring \textbf{continuous metric availability} for approximately three months until a replacement service was adopted.}
+    \resumeItem{Participated in a long-term support project (\textbf{Dragon}), a \textbf{video streaming platform} built on the open-source \textbf{SRS} project and Kubernetes.}
+      \resumeSubItem{Contributed to building a \textbf{hybrid cloud infrastructure} across \textbf{GCP and Alibaba Cloud}, supporting server-side live stream restreaming to multiple platforms.}
+      \resumeSubItem{Evaluated and prototyped CI/CD workflows using \textbf{GitLab webhooks and Tekton Pipelines} as an alternative to GitLab Runner, exploring cloud-native pipeline execution models.}      
   \resumeItemListEnd
 
-  \resumeSubheading
-  {IoT Bootcamp}{Jan. 2021 -- May. 2021}
-  {Industrial Technology Research Institute, (ITRI)}{}  
+\resumeSubheading
+  {IoT Bootcamp (Full-Stack \& System Fundamentals Training)}{Jan. 2021 -- May. 2021}
+  {Industrial Technology Research Institute (ITRI)}{}
   \resumeItemListStart
-    \resumeItem{Participated in a \textbf{project: IndoorAirBox}}
-      \resumeSubItem{Which is a \textbf{monitoring platform} based on \textbf{Raspberry Pi, ESP8266, and related dev-tools}.}      
+    \resumeItem{Completed an intensive hands-on training program covering \textbf{web development fundamentals, system programming, Linux environments, networking basics, and IoT system integration}.}
+    \resumeSubItem{Implemented basic \textbf{front-end web pages using pure HTML, CSS, and JavaScript}, followed by backend development with \textbf{PHP and MySQL} for data persistence and integration.}
+    \resumeSubItem{Built a local \textbf{Linux (Ubuntu) development environment using VirtualBox} and practiced foundational \textbf{Linux system programming concepts}, including process management, file systems, and networking fundamentals.}
+    \resumeSubItem{Acted as a technical lead during team-based projects by introducing \textbf{Git and GitLab} for source code management, enabling collaborative development and version control workflows.}
+    \resumeSubItem{Led the implementation of an \textbf{IoT monitoring system (IndoorAirBox)} using \textbf{Raspberry Pi and ESP8266}, focusing on temperature and humidity data collection with available course resources.}
   \resumeItemListEnd
+
 
   \resumeSubHeadingListEnd  
 
