--- a/src/yh_resume.tex
+++ b/src/yh_resume.tex
@@ -166,16 +166,19 @@
 \section{EXPERIENCE}
   \resumeSubHeadingListStart
 
-  \resumeSubheading
-  {System/DevOps Engineer}{Jun. 2025 -- Current}
-  {Logic Solutions Inc.}{}  
+\resumeSubheading
+  {System / DevOps Engineer}{Jun. 2025 -- Present}
+  {Logic Solutions Inc.}{}
   \resumeItemListStart
-    \resumeItem{\textbf{DevOps Systems} on \textbf{AWS, On-premise}}
-      \resumeSubItem{\textbf{Troubleshooting services error, bugs, performance...etc} on \textbf{AWS (VPC/EC2/RDS...etc), On-premise} with \textbf{Linux CLI tools and related metrics, logs}}
-      \resumeSubItem{\textbf{Building Quantum Product Systems} on \textbf{AWS (VPC/EC2/RDS...etc)} with \textbf{Gitlab/Terraform/Terragrunt/AtlantisTerraform Pull Request Automation/Packer/Ansible}}      
-      \resumeSubItem{\textbf{Maintaining CI/CD pipelines} with \textbf{Jenkins/Groovy scripts/Gitlab}}
-      \resumeSubItem{\textbf{Extend Observability} with \textbf{Grafana/Prometheus/*-exporters/Alertmanager/Consul}}            
+    \resumeItem{Designed, implemented, and maintained \textbf{scalable, reliable, and observable product system architectures} across \textbf{AWS and on-premise / hybrid environments}.}
+    \resumeItem{Operated and maintained \textbf{AWS cloud infrastructure} (VPC, EC2, RDS, Load Balancers, ...etc), ensuring system stability, security, and performance for production workloads.}
+    \resumeItem{Automated infrastructure provisioning and system initialization using \textbf{Infrastructure as Code (IaC)}, leveraging \textbf{Terraform, Terragrunt, Atlantis, Packer, and Ansible} to build reusable AMIs and standardized service stacks.}
+    \resumeItem{Built and maintained \textbf{CI/CD pipelines} using \textbf{Jenkins and GitLab}, including authoring and maintaining \textbf{Groovy scripts} to support build, deployment, and operational workflows.}
+    \resumeItem{Performed \textbf{root cause analysis and troubleshooting} for service errors, performance issues, and system anomalies using \textbf{Linux CLI tools, metrics, and logs} across cloud and on-premise environments.}
+    \resumeItem{Extended system \textbf{observability and reliability} by integrating \textbf{Prometheus, Grafana, Alertmanager, Consul, and custom exporters}, enabling proactive monitoring and incident response.}
+    \resumeItem{Supported deployment, upgrades, and operational maintenance of product systems deployed in \textbf{customer environments}, including \textbf{AWS, Cloudflare, and hybrid on-premise setups}.}
   \resumeItemListEnd
+
 
   \resumeSubheading
   {System/Site Reliability Engineering (SRE)/DevOps Engineering}{Nov. 2023 -- Dec. 2024}
