--- a/src/yh_resume.tex
+++ b/src/yh_resume.tex
@@ -177,12 +177,8 @@
     \resumeItem{Performed \textbf{root cause analysis and troubleshooting} for service errors, performance issues, and system anomalies using \textbf{Linux CLI tools, metrics, and logs} across cloud and on-premise environments.}
     \resumeItem{Extended system \textbf{observability and reliability} by integrating \textbf{Prometheus, Grafana, Alertmanager, Consul, and custom exporters}, enabling proactive monitoring and incident response.}
     \resumeItem{Supported deployment, upgrades, and operational maintenance of product systems deployed in \textbf{customer environments}, including \textbf{AWS, Cloudflare, and hybrid on-premise setups}.}
-    \resumeItem{Reviewed and operated an existing \textbf{GitOps-based Kubernetes deployment} using \textbf{GitLab and Argo CD} on \textbf{AWS EKS}, originally introduced as part of a CNCF-aligned containerization initiative.}
-      \resumeSubItem{Led the \textbf{controlled decommissioning of Argo CD–managed Kubernetes workloads} after evaluating system scale, cost, and operational overhead, determining that the current product stage did not yet justify full Kubernetes adoption.}
-      \resumeSubItem{Identified and resolved \textbf{Argo CD and Helm chart compatibility issues}, including backward-incompatible YAML parsing behavior that prevented clean teardown of managed workloads, ensuring safe removal without leaving orphaned resources.}
-      \resumeSubItem{Safely \textbf{scaled down all worker nodes while preserving the EKS control plane}, maintaining the ability to reintroduce Kubernetes-based deployments in a future migration phase when system scale and requirements mature.}
+    \resumeItem{Reviewed an existing \textbf{GitOps-based Kubernetes architecture} on \textbf{AWS EKS} and, based on \textbf{product scale, operational cost, and system maturity}, led the \textbf{decommissioning of EKS node groups} and the retirement of related subsystems (\textbf{Istio, Karpenter, Argo CD}, etc.) to reduce operational overhead and technical debt.}
   \resumeItemListEnd
-
 
   \resumeSubheading
   {System/Site Reliability Engineering (SRE)/DevOps Engineering}{Nov. 2023 -- Dec. 2024}
@@ -208,9 +204,6 @@
     \resumeItem{Developed a \textbf{Python-based automation project (boce-crawler)} to collect external network metrics and provide a reliable monitoring data source.}
       \resumeSubItem{Implemented a \textbf{scheduled data collection pipeline} using Python and crontab to extract metrics from third-party websites, transform the data, and load it into \textbf{MariaDB} as a \textbf{Grafana data source}.}
       \resumeSubItem{Designed a temporary \textbf{fallback monitoring solution} to mitigate data loss caused by instability of a third-party monitoring API, ensuring \textbf{continuous metric availability} for approximately three months until a replacement service was adopted.}
-    \resumeItem{Participated in a long-term support project (\textbf{Dragon}), a \textbf{video streaming platform} built on the open-source \textbf{SRS} project and Kubernetes.}
-      \resumeSubItem{Contributed to building a \textbf{hybrid cloud infrastructure} across \textbf{GCP and Alibaba Cloud}, supporting server-side live stream restreaming to multiple platforms.}
-      \resumeSubItem{Evaluated and prototyped CI/CD workflows using \textbf{GitLab webhooks and Tekton Pipelines} as an alternative to GitLab Runner, exploring cloud-native pipeline execution models.}      
   \resumeItemListEnd
 
 \resumeSubheading
