--- a/src/yh_resume.tex
+++ b/src/yh_resume.tex
@@ -170,13 +170,12 @@
   {System / DevOps Engineer}{Jun. 2025 -- Present}
   {Logic Solutions Inc.}{}
   \resumeItemListStart
-    \resumeItem{Designed, implemented, and maintained \textbf{scalable, reliable, and observable product system architectures} across \textbf{AWS and on-premise / hybrid environments}.}
-    \resumeItem{Operated and maintained \textbf{AWS cloud infrastructure} (VPC, EC2, RDS, Load Balancers, ...etc), ensuring system stability, security, and performance for production workloads.}
-    \resumeItem{Automated infrastructure provisioning and system initialization using \textbf{Infrastructure as Code (IaC)}, leveraging \textbf{Terraform, Terragrunt, Atlantis, Packer, and Ansible} to build reusable AMIs and standardized service stacks.}
-    \resumeItem{Built and maintained \textbf{CI/CD pipelines} using \textbf{Jenkins and GitLab}, including authoring and maintaining \textbf{Groovy scripts} to support build, deployment, and operational workflows.}
-    \resumeItem{Performed \textbf{root cause analysis and troubleshooting} for service errors, performance issues, and system anomalies using \textbf{Linux CLI tools, metrics, and logs} across cloud and on-premise environments.}
-    \resumeItem{Extended system \textbf{observability and reliability} by integrating \textbf{Prometheus, Grafana, Alertmanager, Consul, and custom exporters}, enabling proactive monitoring and incident response.}
-    \resumeItem{Supported deployment, upgrades, and operational maintenance of product systems deployed in \textbf{customer environments}, including \textbf{AWS, Cloudflare, and hybrid on-premise setups}.}
+    \resumeItem{Working in \textbf{Linux} terminal environment.}
+    \resumeItem{\textbf{AWS Infrastructure management} with \textbf{Terraform/Ansible.}}
+    \resumeItem{Administration \textbf{CI/CD pipelines} with \textbf{jenkins/ArgoCD.}}
+    \resumeItem{Administration \textbf{Bastion host} with \textbf{Consul/Assets/Golane stack.}}
+    \resumeItem{Administration \textbf{Monitoring system} with \textbf{Prometheus, Grafana, Consul stack.}}
+    \resumeItem{Building system on \textbf{AWS or on-premise environment.}}
     \resumeItem{Reviewed an existing \textbf{GitOps-based Kubernetes architecture} on \textbf{AWS EKS} and, based on \textbf{product scale, operational cost, and system maturity}, led the \textbf{decommissioning of EKS node groups} and the retirement of related subsystems (\textbf{Istio, Karpenter, Argo CD}, etc.) to reduce operational overhead and technical debt.}
   \resumeItemListEnd
 
@@ -184,26 +183,23 @@
   {System/Site Reliability Engineering (SRE)/DevOps Engineering}{Nov. 2023 -- Dec. 2024}
   {Mending Technology CO., LTD.}{}  
   \resumeItemListStart
-    \resumeItem{Supported a \textbf{cryptocurrency exchange platform} on AWS and on-premise infrastructure, focusing on making large-scale systems more controllable through \textbf{environment isolation}, \textbf{infrastructure automation}, and \textbf{reliability-oriented practices} across development, test, staging, and production environments.}
-      \resumeSubItem{Built a Docker container-based \textbf{toolbox} for \textbf{troubleshooting and automation development} across \textbf{AWS and on-premise environments}, enabling team members to quickly \textbf{set up standardized workflows}.}
-      \resumeSubItem{Worked with the team to \textbf{build an on-premise development environment} using \textbf{VMware vSphere, Kubernetes (kubeadm), and MetalLB}, reducing dependency on a shared AWS environment and improving developer productivity and environment isolation.}
-      \resumeSubItem{Implemented \textbf{Infrastructure as Code (IaC)} using \textbf{Pulumi (Python) and Ansible} to automate infrastructure changes in the \textbf{production environment} and provision a \textbf{staging environment} for QA, SRE, and DevOps teams.}
-      \resumeSubItem{Participated in \textbf{SRE/DevOps roadmap discussions} focused on improving system controllability, including Docker image hardening, observability enhancements, and automation of incident response workflows, aiming to reduce reliance on individual experience when diagnosing production issues.}
-      \resumeSubItem{Overall, my work focused on \textbf{turning complex cryptocurrency exchange infrastructure} into systems that are \textbf{easier to reason about, operate, and recover from failures}.}
+    \resumeItem{Working in Linux terminal environment.}
+    \resumeItem{Administration a cryptocurrency exchange platform on AWS and on-premise infrastructure.}
+    \resumeItem{Administration kubernates clusters on AWS or on-premise environment.}
+    \resumeItem{AWS/Cloudflare Infrastructure management with Pulumi/Ansible.}
+    \resumeItem{Administration CI/CD pipelines with Gitlab CI/jenkins.}
   \resumeItemListEnd
 
   \resumeSubheading
   {Site Reliability Engineering (SRE)/DevOps/Cloud engineering}{Nov. 2021 -- April. 2023}
   {CloudRock Technology Co., Ltd}{}  
   \resumeItemListStart
-    \resumeItem{Worked from a  Cloud to SRE/DevOps engineer in a consulting environment, supporting \textbf{multiple client systems} (e.g., social/chat applications, payment systems, sports data platforms, and live streaming services) by designing, migrating, and operating systems across \textbf{AWS, GCP, Alibaba Cloud, and Cloudflare}.}
-      \resumeSubItem{Designed and evolved \textbf{CNCF-aligned system architectures} by introducing \textbf{Docker containerization, Kubernetes orchestration, and Ingress-Nginx + cert-manager} across different project phases.}
-      \resumeSubItem{Built and operated cloud-native systems using managed services (\textbf{EC2, EKS, GKE, ELB, RDS}) and self-hosted middleware (\textbf{Nacos, RocketMQ, Redis}), balancing cost, performance, and operational complexity.}
-      \resumeSubItem{Maintained and troubleshot \textbf{multiple Kubernetes clusters} for client environments, providing performance tuning, deployment optimization, and incident-level support.}
-      \resumeSubItem{Built and maintained \textbf{GitLab CI and Jenkins pipelines} for client projects, including optimization of \textbf{.gitlab-ci.yml} and Bash-based GitLab Runner workflows, reducing cross-region CI execution latency and improving pipeline stability.}
-    \resumeItem{Developed a \textbf{Python-based automation project (boce-crawler)} to collect external network metrics and provide a reliable monitoring data source.}
-      \resumeSubItem{Implemented a \textbf{scheduled data collection pipeline} using Python and crontab to extract metrics from third-party websites, transform the data, and load it into \textbf{MariaDB} as a \textbf{Grafana data source}.}
-      \resumeSubItem{Designed a temporary \textbf{fallback monitoring solution} to mitigate data loss caused by instability of a third-party monitoring API, ensuring \textbf{continuous metric availability} for approximately three months until a replacement service was adopted.}
+    \resumeItem{Working in Linux terminal environment.}
+    \resumeItem{Development of Python automation project for web monitoring.}
+    \resumeItem{Development of streaming platflorm project based on GCP(GKE)/Aliyun(ACK).}
+    \resumeItem{Cloud(AWS/GCP/Aliyun/Cloudflare/...etc) Infrastructure management with JumpServer.}
+    \resumeItem{Administration kubernates clusters on AWS(EKS)/GCP(GKE)/Aliyun(ACK).}
+    \resumeItem{Administration CI/CD pipelines with Gitlab CI/jenkins/Tekton.}
   \resumeItemListEnd
 
 \resumeSubheading
@@ -211,12 +207,8 @@
   {Industrial Technology Research Institute (ITRI)}{}
   \resumeItemListStart
     \resumeItem{Completed an intensive hands-on training program covering \textbf{web development fundamentals, system programming, Linux environments, networking basics, and IoT system integration}.}
-    \resumeSubItem{Implemented basic \textbf{front-end web pages using pure HTML, CSS, and JavaScript}, followed by backend development with \textbf{PHP and MySQL} for data persistence and integration.}
-    \resumeSubItem{Built a local \textbf{Linux (Ubuntu) development environment using VirtualBox} and practiced foundational \textbf{Linux system programming concepts}, including process management, file systems, and networking fundamentals.}
-    \resumeSubItem{Acted as a technical lead during team-based projects by introducing \textbf{Git and GitLab} for source code management, enabling collaborative development and version control workflows.}
-    \resumeSubItem{Led the implementation of an \textbf{IoT monitoring system (IndoorAirBox)} using \textbf{Raspberry Pi and ESP8266}, focusing on temperature and humidity data collection with available course resources.}
+    \resumeSubItem{Building an \textbf{IoT monitoring system (IndoorAirBox)} using \textbf{Raspberry Pi and ESP8266}, focusing on temperature and humidity data collection with available course resources.}
   \resumeItemListEnd
-
 
   \resumeSubHeadingListEnd  
 
@@ -242,15 +234,6 @@
           \resumeItem{Learning concepts of \textbf{Serverless services via Cloudflare Workers and Pages}}
           \resumeItem{Development and Deployment CI/CD pipelines with \textbf{Bash, Docker, GitHub, Cloudflare Pages} to make \textbf{Proof of concept.}}
           \resumeItem{\textbf{Tech Stack}: LaTeX, pdf2htmlEX, Bash, JavaScript/TypeScript, node.js, React, Next.js, GNU Make, Github, Linux, Docker, Nginx, Cloudflare Workers and Pages}
-        \resumeItemListEnd          
-    \resumeSubHeadingListEnd
-
-    \resumeSubHeadingListStart
-    \resumeProjectHeading
-        {\textbf{setup devops environment}} {Dec. 2022 -- Present}
-        \resumeItemListStart
-          \resumeItem{Building \textbf{a personal notes website} based on \textbf{Material for MkDocs} to render Markdown files to web pages.}
-          \resumeItem{\textbf{Tech Stack}: Python, Bash, Yaml, Markdown, Github, GitHub Actions, Linux, Docker, Nginx, Cloudflare}
         \resumeItemListEnd          
     \resumeSubHeadingListEnd
 
@@ -282,16 +265,16 @@
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
      \textbf{Languages}{: Mandarin (native), English (professional working proficiency)}\vspace{2pt} \\
-     \textbf{Programming Languages}{: Python(proficient), Bash(competence), SQL(competence), Golang(beginner), Rust(beginner)}\vspace{2pt} \\
+     \textbf{Programming Languages}{: Python(proficient), Bash(competence), SQL(competence), Rust(competence), Golang(beginner)}\vspace{2pt} \\
      \textbf{Version Control}{: git} \\
      \textbf{Frameworks}{: Django, FastAPI, Selenium, pandas, SQLAlchemy} \\
-     \textbf{Operating system}{: Linux(proficient), macOS(beginner), Windows(beginner)}\\
+     \textbf{Operating system}{: Linux(proficient), macOS(competence), Windows(beginner)}\\
      \textbf{Continuous Integration(CI) \& Continuous Delivery(CD)}{:GitLab Runner, Github Actions, Jenkins, Tekton Pipelines, Argo CD} \\
      \textbf{Streaming \& Messaging}{: Apache RocketMQ, RabbitMQ} \\
-     \textbf{Scheduling \& Orchestration}{: Kubernetes(EKS, GKE, ACK, k0s...etc), KEDA} \\
-     \textbf{Service Proxy}{: NGINX, HAProxy, MetalLB, Envoy} \\
-     \textbf{Service Mesh}{: Consul} \\
-     \textbf{Coordination \& Service Discovery}{: Apache Zookeeper, Nacos, Netflix Eureka} \\
+     \textbf{Scheduling \& Orchestration}{: Kubernetes(EKS, GKE, ACK, k0s, k3s...etc)} \\
+     \textbf{Subsystems \& For Kubernetes}{: ingress-nginx, cert-manager, ECK(Elastic Cloud on Kubernetes) operator, KEDA, Istio...etc} \\
+     \textbf{Service Proxy}{: NGINX, HAProxy, MetalLB, Envoy} \\     
+     \textbf{Coordination \& Service Discovery}{: Apache Zookeeper, Nacosm Consul} \\
      \textbf{Container Registry}{: Harbor} \\
      \textbf{Automation \& Configuration}{: Ansible, Atlantis, Terraform, Terragrunt, Pulumi, Ansible} \\
      \textbf{Cloud Providers}{: AWS, Google Cloud, Alibaba Cloud, Cloudflare} \\
