--- a/src/yh_resume.tex
+++ b/src/yh_resume.tex
@@ -220,8 +220,7 @@
     \resumeProjectHeading
         {\textbf{homelab}} {Jun. 2023 -- Present}
         \resumeItemListStart
-          \resumeItem{From \textbf{CNCF's Definition} , trying to build \textbf{lightweight Hybrid Cloud infrastructure} for \textbf{enhancement of personal tech stacks, building personal apps...etc}}
-          \resumeItem{\textbf{Tech Stack}: Python, Bash, Golang, Rust, JavaScript/TypeScript, HTML5, CSS, Cloudflare, AWS, Linux ,Proxmox Virtual Environment, Docker, k3s/k0s cluster(Lightweight Kubernetes), *-exporters, Prometheus, Grafana, ELK stack, Terrform, Ansible, Github Actions, Jenkins Container Registry, service mesh (linkerd), MongoDB, PostgreSQL, MySQL, InfluxDB, ... etc}
+          \resumeItem{Building infrastructure with Proxmox VE to support many persoanl projects's Linux Lab environment.}
         \resumeItemListEnd
     \resumeSubHeadingListEnd
 
@@ -229,11 +228,7 @@
     \resumeProjectHeading
         {\textbf{resume}} {Mar. 2023 -- Present}
         \resumeItemListStart
-          \resumeItem{Building \textbf{a online CV website} based on \textbf{LaTeX} to record my experience, projects, education, skills.}
-          \resumeItem{Render a CV file via \textbf{single HTML-CSS-JavaScript transform from PDF Source with pdf2htmlEX} or access \textbf{PDF file directly via built-in PDF viewer of browsers(Google Chrome, Brave, Firefox, Safari...etc)}}
-          \resumeItem{Learning concepts of \textbf{Serverless services via Cloudflare Workers and Pages}}
-          \resumeItem{Development and Deployment CI/CD pipelines with \textbf{Bash, Docker, GitHub, Cloudflare Pages} to make \textbf{Proof of concept.}}
-          \resumeItem{\textbf{Tech Stack}: LaTeX, pdf2htmlEX, Bash, JavaScript/TypeScript, node.js, React, Next.js, GNU Make, Github, Linux, Docker, Nginx, Cloudflare Workers and Pages}
+          \resumeItem{Building \textbf{a online CV website} based on \textbf{LaTeX} to record my experience, projects, education, skills.}          
         \resumeItemListEnd          
     \resumeSubHeadingListEnd
 
