--- a/src/yh_resume.tex
+++ b/src/yh_resume.tex
@@ -171,35 +171,34 @@
   {Logic Solutions Inc.}{}
   \resumeItemListStart
     \resumeItem{Working in \textbf{Linux} terminal environment.}
-    \resumeItem{\textbf{AWS Infrastructure management} with \textbf{Terraform/Ansible.}}
-    \resumeItem{Administration \textbf{CI/CD pipelines} with \textbf{jenkins/ArgoCD.}}
-    \resumeItem{Administration \textbf{Bastion host} with \textbf{Consul/Assets/Golane stack.}}
+    \resumeItem{Managed and provisioned \textbf{AWS cloud infrastructure} using a \textbf{Terraform / Terragrunt / Atlantis / Ansible} stack integrated with \textbf{Git-based workflows}.}
+    \resumeItem{Administration \textbf{CI/CD pipelines} with \textbf{Jenkins/ArgoCD.}}
+    \resumeItem{Administration \textbf{Bastion host} with \textbf{Consul/Assets/Golane(With Golang implementation) stack.}}
     \resumeItem{Administration \textbf{Monitoring system} with \textbf{Prometheus, Grafana, Consul stack.}}
     \resumeItem{Building system on \textbf{AWS or on-premise environment.}}
-    \resumeItem{Reviewed an existing \textbf{GitOps-based Kubernetes architecture} on \textbf{AWS EKS} and, based on \textbf{product scale, operational cost, and system maturity}, led the \textbf{decommissioning of EKS node groups} and the retirement of related subsystems (\textbf{Istio, Karpenter, Argo CD}, etc.) to reduce operational overhead and technical debt.}
   \resumeItemListEnd
 
   \resumeSubheading
   {System/Site Reliability Engineering (SRE)/DevOps Engineering}{Nov. 2023 -- Dec. 2024}
   {Mending Technology CO., LTD.}{}  
   \resumeItemListStart
-    \resumeItem{Working in Linux terminal environment.}
-    \resumeItem{Administration a cryptocurrency exchange platform on AWS and on-premise infrastructure.}
-    \resumeItem{Administration kubernates clusters on AWS or on-premise environment.}
-    \resumeItem{AWS/Cloudflare Infrastructure management with Pulumi/Ansible.}
-    \resumeItem{Administration CI/CD pipelines with Gitlab CI/jenkins.}
+    \resumeItem{Working in \textbf{Linux} terminal environment.}
+    \resumeItem{Supporting a cryptocurrency exchange platform on \textbf{AWS or on-premise infrastructure.}}
+    \resumeItem{Administration \textbf{k8s(kubernates) clusters on AWS or on-premise environment.}}
+    \resumeItem{\textbf{AWS/Cloudflare Infrastructure management} with \textbf{Pulumi/Ansible.}}
+    \resumeItem{Administration \textbf{CI/CD pipelines with Gitlab CI or Jenkins.}}
   \resumeItemListEnd
 
   \resumeSubheading
   {Site Reliability Engineering (SRE)/DevOps/Cloud engineering}{Nov. 2021 -- April. 2023}
   {CloudRock Technology Co., Ltd}{}  
   \resumeItemListStart
-    \resumeItem{Working in Linux terminal environment.}
-    \resumeItem{Development of Python automation project for web monitoring.}
-    \resumeItem{Development of streaming platflorm project based on GCP(GKE)/Aliyun(ACK).}
-    \resumeItem{Cloud(AWS/GCP/Aliyun/Cloudflare/...etc) Infrastructure management with JumpServer.}
-    \resumeItem{Administration kubernates clusters on AWS(EKS)/GCP(GKE)/Aliyun(ACK).}
-    \resumeItem{Administration CI/CD pipelines with Gitlab CI/jenkins/Tekton.}
+    \resumeItem{Working in \textbf{Linux terminal environment.}}
+    \resumeItem{Development of \textbf{Python automation project for web monitoring.}}
+    \resumeItem{Development of \textbf{streaming platflorm project based on GCP(GKE)/Aliyun(ACK).}}
+    \resumeItem{\textbf{Cloud(AWS/GCP/Aliyun/Cloudflare/...etc) Infrastructure management} with \textbf{JumpServer.}}
+    \resumeItem{Administration \textbf{k8s(kubernates clusters) on AWS(EKS)/GCP(GKE)/Aliyun(ACK).}}
+    \resumeItem{Administration \textbf{CI/CD pipelines with Gitlab CI/jenkins/Tekton.}}
   \resumeItemListEnd
 
 \resumeSubheading
@@ -269,7 +268,7 @@
      \textbf{Scheduling \& Orchestration}{: Kubernetes(EKS, GKE, ACK, k0s, k3s...etc)} \\
      \textbf{Subsystems \& For Kubernetes}{: ingress-nginx, cert-manager, ECK(Elastic Cloud on Kubernetes) operator, KEDA, Istio...etc} \\
      \textbf{Service Proxy}{: NGINX, HAProxy, MetalLB, Envoy} \\     
-     \textbf{Coordination \& Service Discovery}{: Apache Zookeeper, Nacosm Consul} \\
+     \textbf{Coordination \& Service Discovery}{: Apache Zookeeper, Nacos, Consul} \\
      \textbf{Container Registry}{: Harbor} \\
      \textbf{Automation \& Configuration}{: Ansible, Atlantis, Terraform, Terragrunt, Pulumi, Ansible} \\
      \textbf{Cloud Providers}{: AWS, Google Cloud, Alibaba Cloud, Cloudflare} \\
