--- a/src/yh_resume.tex
+++ b/src/yh_resume.tex
@@ -183,6 +183,7 @@
   {Mending Technology CO., LTD.}{}  
   \resumeItemListStart
     \resumeItem{Working in \textbf{Linux} terminal environment.}
+    \resumeItem{Participated in on-call rotations(about 1 week a month), troubleshooting issues in Prod environment with teams members}
     \resumeItem{Supporting a cryptocurrency exchange platform on \textbf{AWS or on-premise infrastructure.}}
     \resumeItem{Administration \textbf{k8s(kubernates) clusters on AWS or on-premise environment.}}
     \resumeItem{\textbf{AWS/Cloudflare Infrastructure management} with \textbf{Pulumi/Ansible.}}
