--- a/src/yh_resume.tex
+++ b/src/yh_resume.tex
@@ -195,6 +195,7 @@
   {CloudRock Technology Co., Ltd}{}  
   \resumeItemListStart
     \resumeItem{Working in \textbf{Linux terminal environment.}}
+    \resumeItem{Participated in on-call rotations, troubleshooting issues with teams members}
     \resumeItem{Development of \textbf{Python automation project for web monitoring.}}
     \resumeItem{Development of \textbf{streaming platflorm project based on GCP(GKE)/Aliyun(ACK).}}
     \resumeItem{\textbf{Cloud(AWS/GCP/Aliyun/Cloudflare/...etc) Infrastructure management} with \textbf{JumpServer.}}
