--- a/src/yh_resume.tex
+++ b/src/yh_resume.tex
@@ -171,11 +171,13 @@
   {Logic Solutions Inc.}{}
   \resumeItemListStart
     \resumeItem{Working in \textbf{Linux} terminal environment.}
-    \resumeItem{Managed and provisioned \textbf{AWS cloud infrastructure} using a \textbf{Terraform / Terragrunt / Atlantis / Ansible} stack integrated with \textbf{Git-based workflows}.}
-    \resumeItem{Administration \textbf{CI/CD pipelines} with \textbf{Jenkins/ArgoCD.}}
-    \resumeItem{Administration \textbf{Bastion host} with \textbf{Consul/Assets/Golane(With Golang implementation) stack.}}
-    \resumeItem{Administration \textbf{Monitoring system} with \textbf{Prometheus, Grafana, Consul stack.}}
-    \resumeItem{Building system on \textbf{AWS or on-premise environment.}}
+    \resumeItem{Maintained \textbf{AWS and on-premise infrastructure} primarily within the Taiwan engineering team, where \textbf{Git-based Infrastructure as Code workflows (Terraform / Terragrunt / Atlantis), Ansible automation, and Jenkins CI/CD pipelines} are actively implemented.}
+    \resumeItem{Operated and supported a \textbf{Git-driven infrastructure automation model} in TW region; other regional teams (US / Nanjing / Shanghai) maintain independent workflows due to product and business differences.}
+    \resumeItem{Assisted in reviewing and validating existing technical documentation and infrastructure processes, identifying inconsistencies across regions.}
+    \resumeItem{Maintained \textbf{system initialization automation via Ansible (Linux configuration, Java runtime, Nginx, RabbitMQ, NFS setup)}}
+    \resumeItem{Built and maintained \textbf{Jenkins CI/CD pipelines using Groovy scripts for TW engineering workflows.}}
+    \resumeItem{Managed \textbf{Bastion host and internal asset tracking stack (Consul + Golang-based services)}, integrating EC2 metadata into centralized access control.}
+    \resumeItem{Maintained \textbf{observability stack (Prometheus, Grafana, Consul)} and supported system monitoring operations.}
   \resumeItemListEnd
 
   \resumeSubheading
