--- a/src/yh_resume.tex
+++ b/src/yh_resume.tex
@@ -177,6 +177,7 @@
     \resumeItem{Maintained \textbf{system initialization automation via Ansible (Linux configuration, Java runtime, Nginx, RabbitMQ, NFS setup)}}
     \resumeItem{Built and maintained \textbf{Jenkins CI/CD pipelines using Groovy scripts for TW engineering workflows.}}
     \resumeItem{Managed \textbf{Bastion host and internal asset tracking stack (Consul + Golang-based services)}, integrating EC2 metadata into centralized access control.}
+    \resumeItem{Analyzed \textbf{system resource utilization and performance metrics} through observability stack (Prometheus / Grafana) to identify \textbf{infrastructure bottlenecks and propose appropriate optimization solutions}.}
     \resumeItem{Maintained \textbf{observability stack (Prometheus, Grafana, Consul)} and supported system monitoring operations.}
   \resumeItemListEnd
 
