--- a/src/yh_resume.tex
+++ b/src/yh_resume.tex
@@ -171,6 +171,7 @@
   {Logic Solutions Inc.}{}
   \resumeItemListStart
     \resumeItem{Working in \textbf{Linux} terminal environment.}
+    \resumeItem{Built and maintained a Rocky Linux–based Amazon Machine Image (AMI) for EC2 using Packer}
     \resumeItem{Maintained \textbf{AWS and on-premise infrastructure} primarily within the Taiwan engineering team, where \textbf{Git-based Infrastructure as Code workflows (Terraform / Terragrunt / Atlantis), Ansible automation, and Jenkins CI/CD pipelines} are actively implemented.}
     \resumeItem{Operated and supported a \textbf{Git-driven infrastructure automation model} in TW region; other regional teams (US / Nanjing / Shanghai) maintain independent workflows due to product and business differences.}
     \resumeItem{Assisted in reviewing and validating existing technical documentation and infrastructure processes, identifying inconsistencies across regions.}
